@@ -1,3 +1,10 @@
+2009-02-23  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (append_keys_to_tree),
+	(update_custom_shortcut): for shortcuts without a description simply
+	show "<Unknown Action>" instead of (unhelpful) parts of its GConf
+	path (bug #572808)
+
 2009-02-20  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keybinding-properties.c: (update_custom_shortcut): don't
